--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
   width: 100%;
   height: 100vh;
   overflow: hidden;
+  background-image: url(img-15.jpg);
   background: linear-gradient(135deg, #4AB1FF, #2D5CFE);
 }
 ::selection{
